cambie imagenes, margenes y detalles varios

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!----- Description y keywords para SEO -->
     <meta name="description" content="sitio de venta de hardware, software y gaming. Asesoramiento para optimizar tu compra">
     <meta name="keywords" content="windows, office, vga, placas de video, RTX, teclado, gaming, gamer, competencias, asesoramiento, ofertas,actualizacion, hardware, software, PS4, nintendo, adobe, visual,EA sports">
-    <!----- Fonts de google: Orbitron,Rajdhani y Staatliches -->
+    <!----- Fonts de google: Orbitron, Rajdhani y Staatliches -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <!----- Favicon ----->
-    <link rel="shorcut icon" href="./media/icono.ico">
+    <link rel="shorcut icon" href="./media/principales/icono.ico">
     <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="./media/logo.jpg" alt="Logo">
+            <img class="logo" src="./media/principales/logo.png" alt="Logo">
             <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
@@ -78,7 +78,7 @@
     <!-- Barra de navegacion bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid lead">
-            <a class="navbar-brand" href="./index.html"><img src="./media/logo2.jpg" width="200px" alt="barra de navegación"></a>
+            <a class="navbar-brand" href="./index.html"><img src="./media/principales/logoymarca.png" width="200px" alt="barra de navegación"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,18 +104,18 @@
                         <a class="nav-link active text-white" aria-current="page" href="./pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="./pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="./pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">🔎</button>
+                    <button class="btn btn-outline-info" type="submit"><img src="./media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
     </nav>
     <!-- Grilla con grid area -->
-    <h2 class="separador"> Bienvenido, antes de comenzar te recomendamos algunas cosas importantes</h2>
+    <h2 class="separador"> Bienvenido! antes de comenzar te recomendamos algunas cosas importantes</h2>
     <main class="recomendaciones">
         <div class="reco1 wow animate__animated animate__fadeIn">
             <h2>No te apures, primero preguntate para que vas a usar tu hard</h2>
@@ -130,16 +130,15 @@
             <p>Tal vez un procesador gráfico integrado cubra tus necesidades ya que en la actualidad tienen la capacidad de soportar exigencias tanto para diseñar como para jugar.</p>
         </div>
         <div class="reco4 wow animate__animated animate__fadeIn">
-            <h2>Más caro no siempres es mejor </h2>
-            <p>Un componente costoso no siempre es el adecuado para mejorar el rendimiento. No dudes en preguntarnos si esta bien determinado repuesto para aumentar tu rendimiento</p>
+            <h2>Más caro no siempre es mejor </h2>
+            <p>Un componente costoso no siempre es el adecuado para mejorar el rendimiento. No dudes en preguntarnos si esta bien tu elección par cubrir tus necesidades.</p>
         </div>
         <div class="reco5 wow animate__animated animate__fadeIn">
             <h2>No todo lo que brilla es oro</h2>
-            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es más importante.</p>
+            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atención, pero tené en cuenta, que siempre la calidad es más importante.</p>
         </div>
         <div class="reco6 wow animate__animated animate__fadeInRight">
-            <h2>Por último, aprovecha nuestras ofertas! </h2>
-            <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p>
+            <h3>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, así que veni y Aprovecha nuestras ofertas!</h3>
         </div>
     </main>
     <h2 class="separador">Te presentamos los "Los más buscados"</h2>
@@ -190,14 +189,14 @@
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <p>📨contacto@codigowg.com.ar</p>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
         </div>
         <div class="footer__marca mt-3">
-            <img class="logo " src="./media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <img class="logo " src="./media/principales/logo.png" alt="Logo">
+            <h1 id="top">C0D1G0>_WG</h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
         <div class="redes">
@@ -215,7 +214,6 @@
             </div>
         </div>
         <a href="#top">Ir al inicio</a>
-        </div>
     </footer>
 
     <!-- Scripts de wow, popper y bootstrap -->
