--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <!----- Favicon ----->
-    <link rel="shorcut icon" href="../media/icono.ico">
+    <link rel="shorcut icon" href="../media/principales/icono.ico">
     <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/logo.jpg" alt="Logo">
+            <img class="logo" src="../media/principales/logo.png" alt="Logo">
             <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
@@ -78,7 +78,7 @@
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid lead">
-            <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../media/principales/logoymarca.png" width="200px" alt="barra de navegación"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,12 +104,12 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">🔎</button>
+                    <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
@@ -121,7 +121,7 @@
                 <legend>FORMULARIO DE CONTACTO</legend>
                 <br>
                 <div>
-                    <label for="Name">*Nombre</label>
+                    <label for="Name">* Nombre</label>
                     <input type="text" name="Name" required>
                 </div>
                 <br>
@@ -131,7 +131,7 @@
                 </div>
                 <br>
                 <div>
-                    <label for="mail">*E-Mail</label>
+                    <label for="mail">* E-Mail</label>
                     <input type="text" name="Mail" required>
                 </div>
                 <br>
@@ -143,8 +143,8 @@
                 </div>
                 <br>
                 <div>
-                    <label for="comentario">*Detallenos su consulta</label><br>
-                    <textarea name="coment" id="consulta" cols="55" rows="8" required></textarea>
+                    <label for="comentario">* Detalle de la consulta</label><br>
+                    <textarea name="coment" id="consulta" cols="45" rows="8" required></textarea>
                     <div class="enviarForm">
                         <input type="submit" value="Enviar">
                         <input type="reset" value="Borrar">
@@ -154,14 +154,12 @@
             </fieldset>
         </form>
         <section class="ubicacion">
-            <div>
-                <ul>
-                    <li>🏢 Av. Triunvirato 4142</li>
-                    <li>Piso 16 dto. 2ºB</li>
-                    <li>📞 Teléfono 5478-6226</li>
-                    <li>📨contacto@codigowg.com.ar</li>
-                </ul>
-            </div><br>
+            <div class="direccion">
+                <p>Av. Triunvirato 4142</p>
+                <p>Piso 16 dto. 2ºB</p>
+                <p>📞 5478-6226</p>
+                <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
+            </div>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.2495717773394!2d-58.48013461184656!3d-34.57890989458077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb66ecfd29955%3A0xefb0ca9660a6098!2sAv%20Triunvirato%204142%2C%20C1431FBR%20CABA!5e0!3m2!1ses-419!2sar!4v1638411310088!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
@@ -170,14 +168,14 @@
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Web de CoderHouse</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <p>📨contacto@codigowg.com.ar</p>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
         </div>
         <div class="footer__marca mt-3">
-            <img class="logo " src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <img class="logo " src="../media/principales/logo.png" alt="Logo">
+            <h1 id="top">C0D1G0>_WG</h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
         <div class="redes">
@@ -195,7 +193,6 @@
             </div>
         </div>
         <a href="#top">Ir al inicio</a>
-        </div>
     </footer>
     <script src="js/wow.min.js"></script>
     <script>
