--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <!----- Favicon ----->
-    <link rel="shorcut icon" href="../media/icono.ico">
+    <link rel="shorcut icon" href="../media/principales/icono.ico">
     <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/logo.jpg" alt="Logo">
+            <img class="logo" src="../media/principales/logo.png" alt="Logo">
             <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
@@ -78,7 +78,7 @@
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid lead">
-            <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../media/principales/logoymarca.png" width="200px" alt="barra de navegación"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,12 +104,12 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">🔎</button>
+                    <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
@@ -173,10 +173,10 @@
     <h2 class="separador">Lo que tenes que saber!</h2>
     <div class="recreo gamenews">
         <div class="recreo__uno">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/25_RVxLpv8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9Dh4Gc98KLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="news">
-                <h3  >AFA Desarrollo Este viernes 23 y sábado 24 se disputará la clasificatoria sudamericana 😉</h3>
-                <p> para la mayor competición de selecciones de la FIFAe del mundo. Un total de 60 selecciones participarán en la FIFA eNations Series 2021.</p>
+                <h3  >MICROSOFT COMPRA ACTIVISION BLIZZARD: TODOS los DETALLES: Precio, juegos, estudios...</h3>
+                <p> Xbox ha anunciado la adquisición de Activision Blizzard y King, responsables de franquicias como Call of Duty, Warcraft, Diablo,  Crash Bandicoot y muchas más, por un precio astronómico de 70.000 millones de dólares. Te contamos todos los detalles en este vídeo.</p>
             </div>
         </div>
         <div class="recreo__dos">
@@ -184,7 +184,7 @@
             <div class="news">
                 <h3>Competencias Gamers! y sacale el jugo a tu compu 🕹
                 </h3>
-                <p>No solo podes competir  mientras la pasas bien sino que tambien pudes ganar dinero haciendolo.</p>
+                <p>No solo podes competir mientras la pasas bien, sino que también podes ganar dinero haciendolo.</p>
             </div>
         </div>
         <div class="recreo__uno">
@@ -209,14 +209,14 @@
     <footer class="container-fluid ">
         <div class="dire ">
             <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <p>📨contacto@codigowg.com.ar</p>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
         </div>
         <div class="footer__marca mt-3 ">
-            <img class="logo " src="../media/logo.jpg " alt="Logo ">
-            <h1 id="top ">codigo>_WG </h1>
+            <img class="logo " src="../media/principales/logo.png" alt="Logo">
+            <h1 id="top ">C0D1G0>_WG</h1>
             <h2 class="eslogan ">for work and gaming</h2>
         </div>
         <div class="redes ">
@@ -234,7 +234,6 @@
             </div>
         </div>
         <a href="#top ">Ir al inicio</a>
-        </div>
     </footer>
     <script src="js/wow.min.js "></script>
     <script>
