--- a/pages/software.html
+++ b/pages/software.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <!----- Favicon ----->
-    <link rel="shorcut icon" href="../media/icono.ico">
+    <link rel="shorcut icon" href="../media/principales/icono.ico">
     <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/logo.jpg" alt="Logo">
+            <img class="logo" src="../media/principales/logo.png" alt="Logo">
             <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
@@ -78,7 +78,7 @@
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid lead">
-            <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../media/principales/logoymarca.png" width="200px" alt="barra de navegación"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,12 +104,12 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">🔎</button>
+                    <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
@@ -121,8 +121,8 @@
         <div class="recreo__uno">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/p0t1x8ZM_-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div>
-                <h3>CTutorial Diseño Gráfico ¿Cuáles son las Herramientas Necesarias?</h3>
-                <p>En este tutorial vemos todo lo que necesitamos para nuestro curso de Diseño Gráfico para principiantes. No se necesita experiencia previa</p>
+                <h3>Diseño Gráfico ¿Cuáles son las Herramientas Necesarias?</h3>
+                <p>En este video vemos todo lo que necesitamos para nuestro curso de Diseño Gráfico para principiantes.</p>
             </div>
         </div>
         <div class="recreo__dos">
@@ -171,7 +171,7 @@
             <img src="../media/articulos/soft_visual_studio.png" width="200px" alt="Microsoft Visual Studio Enterprise 2019">
             <div>
                 <h3>Microsoft Visual Studio Enterprise 2019 (PC & Mac) </h3>
-                <p>Tipo de licencia: de por vida para 1 PC | Funciona en sistemas de 32 y 64 bitsLa clave del producto y las instrucciones de instalación se envían por correo electrónico después de la compra. Idiomas: español, inglés, francés, alemán, italiano,
+                <p>Tipo de licencia: de por vida para 1 PC | Funciona en sistemas de 32 y 64 bits. La clave del producto y las instrucciones de instalación se envían por correo electrónico después de la compra. Idiomas: español, inglés, francés, alemán, italiano,
                     polaco, checo, portugués (Brasil), ruso, turco, chino (simplificado), chino (tradicional), japonés, coreano. Visual Studio 2019 es una solución completa e integrada con herramientas de desarrollo y servicios en la nube.</p>
             </div>
         </div>
@@ -179,7 +179,7 @@
             <img src="../media/articulos/soft_win10.png" width="200px" alt="Windows 10 Home">
             <div>
                 <h3>Windows 10 Home Retail $17.500.-</h3>
-                <p>Idiomas: Todos los idiomas | 32/64 bLa clave del producto y las instrucciones se envían por correo electrónico inmediatamente después de la compra de este producto. Retail: La clave de producto se puede activar en una computadora a la
+                <p>Idiomas: Todos los idiomas | 32/64 bits. La clave del producto y las instrucciones se envían por correo electrónico inmediatamente después de la compra de este producto. Retail: La clave de producto se puede activar en una computadora a la
                     vez, pero se puede mover a una nueva computadora si es necesario.</p>
             </div>
         </div>
@@ -195,14 +195,14 @@
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <p>📨contacto@codigowg.com.ar</p>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>>
         </div>
         <div class="footer__marca">
-            <img class="logo " src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <img class="logo " src="../media/principales/logo.png" alt="Logo">
+            <h1 id="top">C0D1G0>_WG</h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
         <div class="redes">
@@ -220,7 +220,6 @@
             </div>
         </div>
         <a href="#top">Ir al inicio</a>
-        </div>
     </footer>
     <script src="js/wow.min.js"></script>
     <script>
