--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <!----- Favicon ----->
-    <link rel="shorcut icon" href="../media/icono.ico">
+    <link rel="shorcut icon" href="../media/principales/icono.ico">
     <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/logo.jpg" alt="Logo">
+            <img class="logo" src="../media/principales/logo.png" alt="Logo">
             <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
@@ -78,7 +78,7 @@
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid lead">
-            <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../media/principales/logoymarca.png" width="200px" alt="barra de navegación"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,12 +104,12 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">🔎</button>
+                    <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
@@ -167,17 +167,17 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Motherboard</p>
                 <img src="../media/articulos/Mother_MSI.png" width="200px" alt="Motherboard_MSI_B450">
-                <p>MOTHER MSI B450M. PRO-VDH MAX SAM4 B450 . Precio $9.891,00</p>
+                <p>MOTHER MSI B450M PRO-VDH MAX SAM4 B450 . Precio $9.891,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Auriculares </p>
                 <img src="../media/articulos/auricular_hyperx.png" width="200px" alt="auricular_hyperx">
-                <p>HYPERX .CLOUD FLIGHT WIRELESS. Precio $13.290,00</p>
+                <p>HYPERX CLOUD FLIGHT WIRELESS. Precio $13.290,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Webcam </p>
                 <img src="../media/articulos/webcam_solarmax.png" width="200px" alt="webcam_solarmax">
-                <p>SOLARMAX ZOOMY . FULL HD 1080p. Precio $1.899,00</p>
+                <p>SOLARMAX ZOOMY FULL HD 1080p. Precio $1.899,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Disco sólido M.2 </p>
@@ -220,14 +220,14 @@
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <p>📨contacto@codigowg.com.ar</p>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
         </div>
         <div class="footer__marca mt-3">
-            <img class="logo " src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <img class="logo " src="../media/principales/logo.png" alt="Logo">
+            <h1 id="top">C0D1G0>_WG</h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
         <div class="redes">
@@ -245,7 +245,6 @@
             </div>
         </div>
         <a href="#top">Ir al inicio</a>
-        </div>
     </footer>
     <script src="js/wow.min.js"></script>
     <script>
